...
        }
    }
    
    var body: some View {
        Group {
            HStack {
                Button("Close") {
                    self.presentationMode.wrappedValue.dismiss()
                }.padding(.leading, 20)
                Spacer()
                Button("Save") {
                    print("saved pressed")
                    print(self.$scratchModel)
...
