...
                            save()
                            isEditing = false
                        }.accentColor(Color.blue)
                    }
                }
                Section {
                    Button("Add new") {
                        self.showingNew.toggle()
                    }
                    .sheet(isPresented: $showingNew) {
                        FinancialEventDetailView(event: nil).environment(\.managedObjectContext, managedObjectContext)
                    }
                    
...
